# tii-challenge

./: Dockerfile.ci  Jenkinsfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
jenkins/: .gitattributes  Dockerfile  docker-compose.yml
src/my_robot/: CMakeLists.txt  package.xml
src/my_robot/launch/: simulation.launch
src/my_robot/src/: talker.cpp
src/my_robot/tests/: test_listener.cpp  test_talker.cpp
terraform/: ec2.tf
