<?xml version="1.0"?>
<package format="2">
  <name>my_robot</name>
  <version>0.0.1</version>
  <description>Simple ROS package</description>
  <maintainer email="bressan@dee.ufc.br">Marcos Bressan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>rostest</test_depend>
  <test_depend>code_coverage</test_depend>
</package>
